adding event files tot the feature branch and adding event model and repository code

--- a/springboot-mysql-eventura/src/main/resources/application.properties
+++ b/springboot-mysql-eventura/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springboot-mysql-eventura
-spring.datasource.url=jdbc:mysql:///railway
+spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:10896/railway
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=UpQMXFJEwhYbETJedFpgfrXHRntigNLj
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
