--- a/springboot-mysql-eventura/src/main/resources/application.properties
+++ b/springboot-mysql-eventura/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springboot-mysql-eventura
-spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:37340/railway
+spring.datasource.url=jdbc:mysql://switchback.proxy.rlwy.net:54859/railway
 spring.datasource.username=root
-spring.datasource.password=AmsIvMsHNzlWkUAvpcSLVfhoynECNLYg
+spring.datasource.password=ffDIcBVePEzCRFuFtFiHQZvLOmldExfg
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
