--- a/springboot-mysql-eventura/src/main/resources/application.properties
+++ b/springboot-mysql-eventura/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:37340/railway
 spring.datasource.username=root
 spring.datasource.password=AmsIvMsHNzlWkUAvpcSLVfhoynECNLYg
 spring.jpa.hibernate.ddl-auto = update
-
+server.port=${PORT:8080}
 spring.jpa.hibernate.show_sql=true
 spring.data.rest.basePath=/api
