--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,22 +30,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: 'npm'
+          cache-dependency-path: ./frontend_eventura/package-lock.json
+
       - name: Install dependencies
         run: npm ci
+        working-directory: ./frontend_eventura
+
       - name: Build
         run: npm run build
+        working-directory: ./frontend_eventura
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
-          path: './dist'
+          # Upload dist folder from frontend_eventura
+          path: ./frontend_eventura/dist
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
