--- a/frontend_eventura/package.json
+++ b/frontend_eventura/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^6.3.0",
     "sass-embedded": "^1.90.0",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-inspect": "^11.3.2"
   }
 }
