--- a/springboot-mysql-eventura/src/main/resources/application.properties
+++ b/springboot-mysql-eventura/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springboot-mysql-eventura
-spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:37340/railway
-spring.datasource.username=root
-spring.datasource.password=AmsIvMsHNzlWkUAvpcSLVfhoynECNLYg
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventura
+spring.datasource.username=eventura
+spring.datasource.password=eventura
 spring.jpa.hibernate.ddl-auto = update
 server.port=${PORT:8080}
 spring.jpa.hibernate.show_sql=true
