--- a/springboot-mysql-eventura/src/main/resources/application.properties
+++ b/springboot-mysql-eventura/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=springboot-mysql-eventura
-spring.datasource.url=jdbc:postgresql://localhost:5432/eventura
-spring.datasource.username=eventura
-spring.datasource.password=eventura
+spring.application.name=springboot-postgres-eventura
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto = update
 server.port=${PORT:8080}
 spring.jpa.hibernate.show_sql=true
